[package]
name = "pcapdump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
flate2 = "1.0.31"
pcap-parser = { version="0.15.0", features = ["serialize"] }
