[package]
name = "pcapdump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
flate2 = "1.1.1"
pcap-parser = { version="0.16.0", features = ["serialize"] }
