[package]
name = "pcapdump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
flate2 = "1.1.2"
pcap-parser = { version="0.17.0", features = ["serialize"] }
